--- a/JavaScript Basics/Variables.html
+++ b/JavaScript Basics/Variables.html
@@ -19,6 +19,7 @@
     // let vegetableName = "Peas";
         vegetableName = "Tomato";
 // In case of let we cannot declare a same variable name but can assign new value to it
+// let is block specific
     console.log(vegetableName + "\n");
     
 // for const
