--- a/JavaScript Basics/nodejs.html
+++ b/JavaScript Basics/nodejs.html
@@ -7,7 +7,26 @@
 </head>
 <body>
     <script>
-        
+        function myFunction(x)
+        {
+            setTimeout(x,3000);
+        }
+
+        let text = "fine";
+        let cnt=0;
+
+        document.write("Hello");
+        myFunction(function(){
+            document.write(text);
+            count();
+        });
+
+        document.write("<br>" + "How are you?" + "<br>");
+        function count()
+        {
+            cnt++;
+            document.write("<br>"+"count :", cnt);
+        }
     </script>
 </body>
 </html>
