--- a/JavaScript Basics/loops.html
+++ b/JavaScript Basics/loops.html
@@ -55,10 +55,10 @@
 
             console.log("Using filter, map and reduce method : ")
             let array = [
-            {firstname : "Sagar", lastname : "Sati", age : 21},
-            {firstname : "Narendra", lastname : "Modi", age : 70},  
-            {firstname : "Jai Shree", lastname : "Ram", age : 50},
-            {firstname : "Amisha", lastname : "Rawat", age : 21}
+            {firstname : "John", lastname : "Doe", age : 21},
+            {firstname : "PQR", lastname : "PQR", age : 70},  
+            {firstname : "ABC", lastname : "ABC", age : 50},
+            {firstname : "XYZ", lastname : "XYZ", age : 21}
             ]  
 
             let output = array.filter((x)=>x.age<30).map((x)=>x.firstname + " " + x.lastname)
